[package]
name = "dam"
version = "0.5.3"
edition = "2024"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde_json = "1.0"
toml = "0.8"
walkdir = "2"
chrono = "0.4"
glob = "0.3"
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
zip = "0.6"
aes-gcm = "0.10"
pbkdf2 = "0.12"
rand = "0.8"
rpassword = "7.2"
base64 = "0.21"
keyring = "2.3.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_Foundation", "Win32_System_Console"] }

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
ar = "x86_64-w64-mingw32-ar"
